<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/countText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:fontFamily="@font/quantico"
        android:text="@string/count_0"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/targetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@string/set_target"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/target" />
    -->

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="@id/setTime"
        app:srcCompat="@drawable/line"
        android:contentDescription="@string/line" />


    <TextView
        android:id="@+id/tapSpace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="92dp"
        android:background="#2E2E2E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countText" />


    <TextView
        android:id="@+id/timerSlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/quantico"
        android:text="@string/_00_00_00"
        android:layout_marginTop="1dp"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tapSpace" />


    <ImageButton
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_png"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/timerSlot"
        app:layout_constraintTop_toTopOf="@+id/tapSpace"
        app:layout_constraintBottom_toBottomOf="@+id/timerSlot"
        android:contentDescription="@string/set_time"/>

    <ImageView
        android:id="@+id/pauseImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_pause_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:contentDescription="@string/pause_image" />

    <Button
        android:id="@+id/reset"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:backgroundTint="#A8A8A8"
        android:fontFamily="@font/quantico"
        android:padding="15dp"
        android:text="@string/reset_count"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapSpace" />


    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/quantico"
        android:paddingLeft="4sp"
        android:paddingRight="4sp"
        android:text="@string/copyright_nightxstudio"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SmallSp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/quantico"
        android:text="@string/pause_feature_is_not_available_in_timer_mode"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>